hope this moves things along

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="spreadsheet-functions.js"></script>
   <script src="makemusic.js"></script>
+  <script src="nums-to-sounds/nums-to-sounds.js"></script>
   <script src="nums-to-sounds/convertToFreqs.js"></script>
 
   <!-- ADD MUSIC MAKE SCRIPT -->
