--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
     background: #fff;
     padding: 20px 0;
     border: solid 3px #999;
-    border-radius: center;
+    border-radius: 6px;
   }
   #container > div {
     margin: 0 auto;
   }
   #logo {
-    width: 80px;
+    width: 120px;
     height: auto;
+    margin: -16px 0 -20px 0;
   }
   .music-option {
     margin: 32px auto;
