updated tracks to play full year

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
     </div>
   </div>
   <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="amazon.js"></script>
+  <script src="google.js"></script>
+  <script src="yahoo.js"></script>
   <script src="spreadsheet-functions.js"></script>
   <script src="makemusic.js"></script>
   <script src="nums-to-sounds/nums-to-sounds.js"></script>
